lib/core/api/Ximu3.h

typedef enum XIMU3_ChargingStatus
{
    XIMU3_ChargingStatusNotConnected,
    XIMU3_ChargingStatusCharging,
    XIMU3_ChargingStatusChargingComplete,
} XIMU3_ChargingStatus;
typedef enum XIMU3_ConnectionType
{
    XIMU3_ConnectionTypeUsb,
    XIMU3_ConnectionTypeSerial,
    XIMU3_ConnectionTypeTcp,
    XIMU3_ConnectionTypeUdp,
    XIMU3_ConnectionTypeBluetooth,
    XIMU3_ConnectionTypeFile,
} XIMU3_ConnectionType;
typedef enum XIMU3_FileConverterStatus
{
    XIMU3_FileConverterStatusComplete,
    XIMU3_FileConverterStatusFailed,
    XIMU3_FileConverterStatusInProgress,
} XIMU3_FileConverterStatus;
typedef enum XIMU3_Result
{
    XIMU3_ResultOk,
    XIMU3_ResultError,
} XIMU3_Result;
typedef struct XIMU3_Connection XIMU3_Connection;
typedef struct XIMU3_FileConverter XIMU3_FileConverter;
typedef struct XIMU3_NetworkAnnouncement XIMU3_NetworkAnnouncement;
typedef struct XIMU3_PortScanner XIMU3_PortScanner;
typedef struct XIMU3_UsbConnectionInfo
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_UsbConnectionInfo;
typedef struct XIMU3_SerialConnectionInfo
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
    uint32_t baud_rate;
    bool rts_cts_enabled;
} XIMU3_SerialConnectionInfo;
typedef struct XIMU3_TcpConnectionInfo
{
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t port;
} XIMU3_TcpConnectionInfo;
typedef struct XIMU3_UdpConnectionInfo
{
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t send_port;
    uint16_t receive_port;
} XIMU3_UdpConnectionInfo;
typedef struct XIMU3_BluetoothConnectionInfo
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_BluetoothConnectionInfo;
typedef struct XIMU3_PingResponse
{
    enum XIMU3_Result result;
    char interface[XIMU3_CHAR_ARRAY_SIZE];
    char device_name[XIMU3_CHAR_ARRAY_SIZE];
    char serial_number[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_PingResponse;
typedef struct XIMU3_FileConverterProgress
{
    enum XIMU3_FileConverterStatus status;
    float percentage;
    uint64_t bytes_processed;
    uint64_t bytes_total;
} XIMU3_FileConverterProgress;
typedef void (*XIMU3_CallbackFileConverterProgress)(struct XIMU3_FileConverterProgress data, void *context);
typedef struct XIMU3_NetworkAnnouncementMessage
{
    char device_name[XIMU3_CHAR_ARRAY_SIZE];
    char serial_number[XIMU3_CHAR_ARRAY_SIZE];
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t tcp_port;
    uint16_t udp_send;
    uint16_t udp_receive;
    int32_t rssi;
    int32_t battery;
    enum XIMU3_ChargingStatus charging_status;
} XIMU3_NetworkAnnouncementMessage;
typedef struct XIMU3_NetworkAnnouncementMessages
{
    struct XIMU3_NetworkAnnouncementMessage *array;
    uint32_t length;
    uint32_t capacity;
} XIMU3_NetworkAnnouncementMessages;
typedef void (*XIMU3_CallbackNetworkAnnouncementMessageC)(struct XIMU3_NetworkAnnouncementMessage data, void *context);
typedef struct XIMU3_Device
{
    char device_name[XIMU3_CHAR_ARRAY_SIZE];
    char serial_number[XIMU3_CHAR_ARRAY_SIZE];
    enum XIMU3_ConnectionType connection_type;
    struct XIMU3_UsbConnectionInfo usb_connection_info;
    struct XIMU3_SerialConnectionInfo serial_connection_info;
    struct XIMU3_BluetoothConnectionInfo bluetooth_connection_info;
} XIMU3_Device;
typedef struct XIMU3_Devices
{
    struct XIMU3_Device *array;
    uint32_t length;
    uint32_t capacity;
} XIMU3_Devices;
typedef void (*XIMU3_CallbackDevices)(struct XIMU3_Devices data, void *context);
uint64_t XIMU3_connection_add_end_of_file_callback(struct XIMU3_Connection *connection, void (*callback)(void *context), void *context);
struct XIMU3_FileConverter *XIMU3_file_converter_new(const char *destination, const char *name, const char *const *files, uint32_t length, XIMU3_CallbackFileConverterProgress callback, void *context);
void XIMU3_file_converter_free(struct XIMU3_FileConverter *file_converter);
struct XIMU3_FileConverterProgress XIMU3_file_converter_convert(const char *destination, const char *name, const char *const *file_paths, uint32_t length);
struct XIMU3_TcpConnectionInfo XIMU3_network_announcement_message_to_tcp_connection_info(struct XIMU3_NetworkAnnouncementMessage message);
struct XIMU3_UdpConnectionInfo XIMU3_network_announcement_message_to_udp_connection_info(struct XIMU3_NetworkAnnouncementMessage message);
const char *XIMU3_network_announcement_message_to_string(struct XIMU3_NetworkAnnouncementMessage message);
void XIMU3_network_announcement_messages_free(struct XIMU3_NetworkAnnouncementMessages messages);
struct XIMU3_NetworkAnnouncement *XIMU3_network_announcement_new(void);
void XIMU3_network_announcement_free(struct XIMU3_NetworkAnnouncement *network_announcement);
enum XIMU3_Result XIMU3_network_announcement_get_result(struct XIMU3_NetworkAnnouncement *network_announcement);
uint64_t XIMU3_network_announcement_add_callback(struct XIMU3_NetworkAnnouncement *network_announcement, XIMU3_CallbackNetworkAnnouncementMessageC callback, void *context);
void XIMU3_network_announcement_remove_callback(struct XIMU3_NetworkAnnouncement *network_announcement, uint64_t callback_id);
struct XIMU3_NetworkAnnouncementMessages XIMU3_network_announcement_get_messages(struct XIMU3_NetworkAnnouncement *network_announcement);
struct XIMU3_NetworkAnnouncementMessages XIMU3_network_announcement_get_messages_after_short_delay(struct XIMU3_NetworkAnnouncement *network_announcement);
const char *XIMU3_ping_response_to_string(struct XIMU3_PingResponse ping_response);
const char *XIMU3_device_to_string(struct XIMU3_Device device);
void XIMU3_devices_free(struct XIMU3_Devices devices);
struct XIMU3_PortScanner *XIMU3_port_scanner_new(XIMU3_CallbackDevices callback, void *context);