lib/core/api/ximu3_bindings.g.dart


  late final _XIMU3_file_converter_newPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<XIMU3_FileConverter> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Uint32,
              XIMU3_CallbackFileConverterProgress,
              ffi.Pointer<ffi.Void>)>>('XIMU3_file_converter_new');
  late final _XIMU3_file_converter_new =
      _XIMU3_file_converter_newPtr.asFunction<
          ffi.Pointer<XIMU3_FileConverter> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              int,
              XIMU3_CallbackFileConverterProgress,
              ffi.Pointer<ffi.Void>)>();

  void XIMU3_file_converter_free(
    ffi.Pointer<XIMU3_FileConverter> file_converter,
  ) {
    return _XIMU3_file_converter_free(
      file_converter,
    );
  }

  late final _XIMU3_file_converter_freePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<XIMU3_FileConverter>)>>(
      'XIMU3_file_converter_free');
  late final _XIMU3_file_converter_free = _XIMU3_file_converter_freePtr
      .asFunction<void Function(ffi.Pointer<XIMU3_FileConverter>)>();

  XIMU3_FileConverterProgress XIMU3_file_converter_convert(
    ffi.Pointer<ffi.Char> destination,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Pointer<ffi.Char>> file_paths,
    int length,
  ) {
    return _XIMU3_file_converter_convert(
      destination,
      name,
      file_paths,
      length,
    );
  }

  late final _XIMU3_file_converter_convertPtr = _lookup<
      ffi.NativeFunction<
          XIMU3_FileConverterProgress Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Uint32)>>('XIMU3_file_converter_convert');
  late final _XIMU3_file_converter_convert =
      _XIMU3_file_converter_convertPtr.asFunction<
          XIMU3_FileConverterProgress Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              int)>();

  XIMU3_TcpConnectionInfo
      XIMU3_network_announcement_message_to_tcp_connection_info(
    XIMU3_NetworkAnnouncementMessage message,
  ) {
    return _XIMU3_network_announcement_message_to_tcp_connection_info(
      message,
    );
  }

  late final _XIMU3_network_announcement_message_to_tcp_connection_infoPtr =
      _lookup<
              ffi.NativeFunction<
                  XIMU3_TcpConnectionInfo Function(
                      XIMU3_NetworkAnnouncementMessage)>>(
          'XIMU3_network_announcement_message_to_tcp_connection_info');
  late final _XIMU3_network_announcement_message_to_tcp_connection_info =
      _XIMU3_network_announcement_message_to_tcp_connection_infoPtr.asFunction<
          XIMU3_TcpConnectionInfo Function(XIMU3_NetworkAnnouncementMessage)>();

  XIMU3_UdpConnectionInfo
      XIMU3_network_announcement_message_to_udp_connection_info(
    XIMU3_NetworkAnnouncementMessage message,
  ) {
    return _XIMU3_network_announcement_message_to_udp_connection_info(
      message,
    );
  }

  late final _XIMU3_network_announcement_message_to_udp_connection_infoPtr =
      _lookup<
              ffi.NativeFunction<
                  XIMU3_UdpConnectionInfo Function(
                      XIMU3_NetworkAnnouncementMessage)>>(
          'XIMU3_network_announcement_message_to_udp_connection_info');
  late final _XIMU3_network_announcement_message_to_udp_connection_info =
      _XIMU3_network_announcement_message_to_udp_connection_infoPtr.asFunction<
          XIMU3_UdpConnectionInfo Function(XIMU3_NetworkAnnouncementMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_network_announcement_message_to_string(
    XIMU3_NetworkAnnouncementMessage message,
  ) {
    return _XIMU3_network_announcement_message_to_string(
      message,
    );
  }

  late final _XIMU3_network_announcement_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  XIMU3_NetworkAnnouncementMessage)>>(
      'XIMU3_network_announcement_message_to_string');
  late final _XIMU3_network_announcement_message_to_string =
      _XIMU3_network_announcement_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_NetworkAnnouncementMessage)>();

  void XIMU3_network_announcement_messages_free(
    XIMU3_NetworkAnnouncementMessages messages,
  ) {
    return _XIMU3_network_announcement_messages_free(
      messages,
    );
  }

  late final _XIMU3_network_announcement_messages_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(XIMU3_NetworkAnnouncementMessages)>>(
      'XIMU3_network_announcement_messages_free');
  late final _XIMU3_network_announcement_messages_free =
      _XIMU3_network_announcement_messages_freePtr.asFunction<
          void Function(XIMU3_NetworkAnnouncementMessages)>();

  ffi.Pointer<XIMU3_NetworkAnnouncement> XIMU3_network_announcement_new() {
    return _XIMU3_network_announcement_new();
  }

  late final _XIMU3_network_announcement_newPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<XIMU3_NetworkAnnouncement> Function()>>(
      'XIMU3_network_announcement_new');
  late final _XIMU3_network_announcement_new =
      _XIMU3_network_announcement_newPtr.asFunction<
          ffi.Pointer<XIMU3_NetworkAnnouncement> Function()>();

  void XIMU3_network_announcement_free(
    ffi.Pointer<XIMU3_NetworkAnnouncement> network_announcement,
  ) {
    return _XIMU3_network_announcement_free(
      network_announcement,
    );
  }

  late final _XIMU3_network_announcement_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<XIMU3_NetworkAnnouncement>)>>(
      'XIMU3_network_announcement_free');
  late final _XIMU3_network_announcement_free =
      _XIMU3_network_announcement_freePtr.asFunction<
          void Function(ffi.Pointer<XIMU3_NetworkAnnouncement>)>();

  int XIMU3_network_announcement_get_result(
    ffi.Pointer<XIMU3_NetworkAnnouncement> network_announcement,
  ) {
    return _XIMU3_network_announcement_get_result(
      network_announcement,
    );
  }

  late final _XIMU3_network_announcement_get_resultPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(ffi.Pointer<XIMU3_NetworkAnnouncement>)>>(
      'XIMU3_network_announcement_get_result');
  late final _XIMU3_network_announcement_get_result =
      _XIMU3_network_announcement_get_resultPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_NetworkAnnouncement>)>();

  int XIMU3_network_announcement_add_callback(
    ffi.Pointer<XIMU3_NetworkAnnouncement> network_announcement,
    XIMU3_CallbackNetworkAnnouncementMessageC callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_network_announcement_add_callback(
      network_announcement,
      callback,
      context,
    );
  }

  late final _XIMU3_network_announcement_add_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<XIMU3_NetworkAnnouncement>,
                  XIMU3_CallbackNetworkAnnouncementMessageC,
                  ffi.Pointer<ffi.Void>)>>(
      'XIMU3_network_announcement_add_callback');
  late final _XIMU3_network_announcement_add_callback =
      _XIMU3_network_announcement_add_callbackPtr.asFunction<
          int Function(
              ffi.Pointer<XIMU3_NetworkAnnouncement>,
              XIMU3_CallbackNetworkAnnouncementMessageC,
              ffi.Pointer<ffi.Void>)>();

  void XIMU3_network_announcement_remove_callback(
    ffi.Pointer<XIMU3_NetworkAnnouncement> network_announcement,
    int callback_id,
  ) {
    return _XIMU3_network_announcement_remove_callback(
      network_announcement,
      callback_id,
    );
  }

  late final _XIMU3_network_announcement_remove_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<XIMU3_NetworkAnnouncement>,
              ffi.Uint64)>>('XIMU3_network_announcement_remove_callback');
  late final _XIMU3_network_announcement_remove_callback =
      _XIMU3_network_announcement_remove_callbackPtr.asFunction<
          void Function(ffi.Pointer<XIMU3_NetworkAnnouncement>, int)>();

  XIMU3_NetworkAnnouncementMessages XIMU3_network_announcement_get_messages(
    ffi.Pointer<XIMU3_NetworkAnnouncement> network_announcement,
  ) {
    return _XIMU3_network_announcement_get_messages(
      network_announcement,
    );
  }

  late final _XIMU3_network_announcement_get_messagesPtr = _lookup<
          ffi.NativeFunction<
              XIMU3_NetworkAnnouncementMessages Function(
                  ffi.Pointer<XIMU3_NetworkAnnouncement>)>>(
      'XIMU3_network_announcement_get_messages');
  late final _XIMU3_network_announcement_get_messages =
      _XIMU3_network_announcement_get_messagesPtr.asFunction<
          XIMU3_NetworkAnnouncementMessages Function(
              ffi.Pointer<XIMU3_NetworkAnnouncement>)>();

  XIMU3_NetworkAnnouncementMessages
      XIMU3_network_announcement_get_messages_after_short_delay(
    ffi.Pointer<XIMU3_NetworkAnnouncement> network_announcement,
  ) {
    return _XIMU3_network_announcement_get_messages_after_short_delay(
      network_announcement,
    );
  }

  late final _XIMU3_network_announcement_get_messages_after_short_delayPtr =
      _lookup<
              ffi.NativeFunction<
                  XIMU3_NetworkAnnouncementMessages Function(
                      ffi.Pointer<XIMU3_NetworkAnnouncement>)>>(
          'XIMU3_network_announcement_get_messages_after_short_delay');
  late final _XIMU3_network_announcement_get_messages_after_short_delay =
      _XIMU3_network_announcement_get_messages_after_short_delayPtr.asFunction<
          XIMU3_NetworkAnnouncementMessages Function(
              ffi.Pointer<XIMU3_NetworkAnnouncement>)>();

  ffi.Pointer<ffi.Char> XIMU3_ping_response_to_string(
    XIMU3_PingResponse ping_response,
  ) {
    return _XIMU3_ping_response_to_string(
      ping_response,
    );
  }

  late final _XIMU3_ping_response_to_stringPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(XIMU3_PingResponse)>>(
      'XIMU3_ping_response_to_string');
  late final _XIMU3_ping_response_to_string = _XIMU3_ping_response_to_stringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(XIMU3_PingResponse)>();

  ffi.Pointer<ffi.Char> XIMU3_device_to_string(
    XIMU3_Device device,
  ) {
    return _XIMU3_device_to_string(
      device,
    );
  }

  late final _XIMU3_device_to_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(XIMU3_Device)>>(
          'XIMU3_device_to_string');
  late final _XIMU3_device_to_string = _XIMU3_device_to_stringPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(XIMU3_Device)>();

  void XIMU3_devices_free(
    XIMU3_Devices devices,
  ) {
    return _XIMU3_devices_free(
      devices,
    );
  }

  late final _XIMU3_devices_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(XIMU3_Devices)>>(
          'XIMU3_devices_free');
  late final _XIMU3_devices_free =
      _XIMU3_devices_freePtr.asFunction<void Function(XIMU3_Devices)>();

  ffi.Pointer<XIMU3_PortScanner> XIMU3_port_scanner_new(
    XIMU3_CallbackDevices callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_port_scanner_new(
      callback,
      context,
    );
  }

  late final _XIMU3_port_scanner_newPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<XIMU3_PortScanner> Function(XIMU3_CallbackDevices,
              ffi.Pointer<ffi.Void>)>>('XIMU3_port_scanner_new');
  late final _XIMU3_port_scanner_new = _XIMU3_port_scanner_newPtr.asFunction<
      ffi.Pointer<XIMU3_PortScanner> Function(
          XIMU3_CallbackDevices, ffi.Pointer<ffi.Void>)>();
